--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/prettyGoo/gunbird#readme",
   "dependencies": {
+    "chai": "^4.1.2",
     "commander": "^2.11.0",
     "mocha": "^4.0.1",
     "vorpal": "^1.12.0"
